[fix][salih] fix overflow problem v2

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,3 +5,7 @@
 .centerDiv50 {
 	margin: 50px auto;
 }
+
+.maxWidth {
+	max-width: 250px;
+}
